# RotateDickMac

./: README.md
RotateDick/: CMakeLists.txt  README.md  RotateDick  blocks.c  blocks.h  functions.c  functions.h  main.c  main.cpp  reset.c  reset.h  stage1.c  stage1.h  stage2.c  stage2.h  startmenu.c  startmenu.h
RotateDick/RotateDick.app/Contents/: Info.plist
RotateDick/RotateDick.app/Contents/MacOS/: RotateDick
RotateDick/RotateDick.app/Contents/Resources/: icon.icns
RotateDickMac/RotateDickMac/: main.cpp
RotateDickMac/RotateDickMac.xcodeproj/: project.pbxproj
RotateDickMac/RotateDickMac.xcodeproj/project.xcworkspace/xcuserdata/shousake.xcuserdatad/: UserInterfaceState.xcuserstate
RotateDickMac/RotateDickMac.xcodeproj/xcuserdata/shousake.xcuserdatad/xcschemes/: xcschememanagement.plist
